Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
 <p><a href="https://twiki.cern.ch/twiki/bin/view/MimosaTelescope/WebHome">Telescope TWiki pages</a></p>
 
+<p><a href="http://www.eudet.org/e26/e28/e42441/e57298/EUDET-MEMO-2009-04.pdf">Description of the trigger logic unit (TLU), v0.2c</a></p>
+
 <h2>
 <a name="daq-and-analysis-software" class="anchor" href="#daq-and-analysis-software"><span class="octicon octicon-link"></span></a>DAQ and Analysis Software</h2>
 
@@ -60,18 +62,20 @@
 <h2>
 <a name="further-references" class="anchor" href="#further-references"><span class="octicon octicon-link"></span></a>Further References</h2>
 
-<h3>
-<a name="eudet-project" class="anchor" href="#eudet-project"><span class="octicon octicon-link"></span></a>EUDET Project</h3>
+<h4>
+<a name="eudet-project" class="anchor" href="#eudet-project"><span class="octicon octicon-link"></span></a>EUDET Project</h4>
 
 <p><a href="http://www.eudet.org/e13/e21/">EUDET JRA1 Website</a></p>
 
-<h3>
-<a name="aida-project" class="anchor" href="#aida-project"><span class="octicon octicon-link"></span></a>AIDA Project</h3>
+<p><a href="http://www.eudet.org/e26/">EUDET Reports &amp; Presentations</a></p>
+
+<h4>
+<a name="aida-project" class="anchor" href="#aida-project"><span class="octicon octicon-link"></span></a>AIDA Project</h4>
 
 <p><a href="http://aida.web.cern.ch/aida/index.html">AIDA Website</a></p>
 
-<h3>
-<a name="desy-ii-test-beam-facility" class="anchor" href="#desy-ii-test-beam-facility"><span class="octicon octicon-link"></span></a>DESY-II Test Beam Facility</h3>
+<h4>
+<a name="desy-ii-test-beam-facility" class="anchor" href="#desy-ii-test-beam-facility"><span class="octicon octicon-link"></span></a>DESY-II Test Beam Facility</h4>
 
 <p><a href="http://testbeam.desy.de/">Website</a></p>
 
