Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
 <a name="further-references" class="anchor" href="#further-references"><span class="octicon octicon-link"></span></a>Further References</h2>
 
 <h4>
+<a name="workshops" class="anchor" href="#workshops"><span class="octicon octicon-link"></span></a>Workshops</h4>
+
+<p><a href="https://indico.desy.de/conferenceDisplay.py?confId=10296">Beam Telescopes and Testbeams for Detector R&amp;D 2014</a></p>
+
+<p><a href="https://indico.desy.de/conferenceDisplay.py?confId=7597">Testbeam Pixel Telescope Data Analysis Workshop 2013</a></p>
+
+<h4>
 <a name="eudet-project" class="anchor" href="#eudet-project"><span class="octicon octicon-link"></span></a>EUDET Project</h4>
 
 <p><a href="http://www.eudet.org/e13/e21/">EUDET JRA1 Website</a></p>
