Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
 <p><a href="http://www.eudet.org/e26/e28/e42441/e57298/EUDET-MEMO-2009-04.pdf">Description of the trigger logic unit (TLU), v0.2c</a></p>
 
+<p><a href="http://www.ohwr.org/projects/fmc-mtlu">Wiki pages for the AIDA mini-TLU</a></p>
+
 <h2>
 <a name="daq-and-analysis-software" class="anchor" href="#daq-and-analysis-software"><span class="octicon octicon-link"></span></a>DAQ and Analysis Software</h2>
 
