--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Please check out the above pages for documentation and support contacts for the corresponding telescope component.</p>
+<p>To stay in touch and to receive announcements concerning workshops, the telescopes and testbeams, please subscribe to the CERN e-group <code>BeamTelescopesandTestBeams-Announcements</code>.</p>
+
+<p>For specific telescope components please check out the corresponding pages above for documentation and support contacts.</p>
       </section>
     </div>
 
