Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="EUDET/AIDA Pixel Beam Telescopes : References and Documentation" />
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="EUDET/AIDA Pixel Beam Telescopes : References and Documentation">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -32,7 +32,7 @@
 <p>This page collects all helpful references and documentation for the EUDET/AIDA-family of pixel beam telescopes based on Mimosa-sensors.</p>
 
 <h2>
-<a name="telescope-hardware" class="anchor" href="#telescope-hardware"><span class="octicon octicon-link"></span></a>Telescope Hardware</h2>
+<a id="telescope-hardware" class="anchor" href="#telescope-hardware" aria-hidden="true"><span class="octicon octicon-link"></span></a>Telescope Hardware</h2>
 
 <p><a href="https://twiki.cern.ch/twiki/bin/view/MimosaTelescope/WebHome">Telescope TWiki pages</a></p>
 
@@ -41,10 +41,10 @@
 <p><a href="http://www.ohwr.org/projects/fmc-mtlu">Online documentation pages for the AIDA mini-TLU</a></p>
 
 <h2>
-<a name="daq-and-analysis-software" class="anchor" href="#daq-and-analysis-software"><span class="octicon octicon-link"></span></a>DAQ and Analysis Software</h2>
+<a id="daq-and-analysis-software" class="anchor" href="#daq-and-analysis-software" aria-hidden="true"><span class="octicon octicon-link"></span></a>DAQ and Analysis Software</h2>
 
 <h3>
-<a name="eudaq" class="anchor" href="#eudaq"><span class="octicon octicon-link"></span></a>EUDAQ</h3>
+<a id="eudaq" class="anchor" href="#eudaq" aria-hidden="true"><span class="octicon octicon-link"></span></a>EUDAQ</h3>
 
 <p>a generic data acquisition framework</p>
 
@@ -53,7 +53,7 @@
 <p><a href="https://github.com/eudaq/eudaq">Source Code</a></p>
 
 <h3>
-<a name="eutelescope" class="anchor" href="#eutelescope"><span class="octicon octicon-link"></span></a>EUTelescope</h3>
+<a id="eutelescope" class="anchor" href="#eutelescope" aria-hidden="true"><span class="octicon octicon-link"></span></a>EUTelescope</h3>
 
 <p>A generic pixel telescope data analysis framework</p>
 
@@ -62,34 +62,36 @@
 <p><a href="https://github.com/eutelescope/eutelescope">Source Code</a></p>
 
 <h2>
-<a name="further-references" class="anchor" href="#further-references"><span class="octicon octicon-link"></span></a>Further References</h2>
+<a id="further-references" class="anchor" href="#further-references" aria-hidden="true"><span class="octicon octicon-link"></span></a>Further References</h2>
 
 <h4>
-<a name="workshops" class="anchor" href="#workshops"><span class="octicon octicon-link"></span></a>Workshops</h4>
+<a id="workshops" class="anchor" href="#workshops" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workshops</h4>
 
-<p><a href="https://indico.desy.de/conferenceDisplay.py?confId=10296">Beam Telescopes and Testbeams for Detector R&amp;D 2014</a></p>
+<p><a href="http://indico.desy.de/conferenceDisplay.py?confId=10685">3rd Beam Telescopes and Test Beams Workshop 2015</a></p>
 
-<p><a href="https://indico.desy.de/conferenceDisplay.py?confId=7597">Testbeam Pixel Telescope Data Analysis Workshop 2013</a></p>
+<p><a href="http://indico.desy.de/conferenceDisplay.py?confId=10296">Beam Telescopes and Testbeams for Detector R&amp;D 2014</a></p>
+
+<p><a href="http://indico.desy.de/conferenceDisplay.py?confId=7597">Testbeam Pixel Telescope Data Analysis Workshop 2013</a></p>
 
 <h4>
-<a name="eudet-project" class="anchor" href="#eudet-project"><span class="octicon octicon-link"></span></a>EUDET Project</h4>
+<a id="eudet-project" class="anchor" href="#eudet-project" aria-hidden="true"><span class="octicon octicon-link"></span></a>EUDET Project</h4>
 
 <p><a href="http://www.eudet.org/e13/e21/">EUDET JRA1 Website</a></p>
 
 <p><a href="http://www.eudet.org/e26/">EUDET Reports &amp; Presentations</a></p>
 
 <h4>
-<a name="aida-project" class="anchor" href="#aida-project"><span class="octicon octicon-link"></span></a>AIDA Project</h4>
+<a id="aida-project" class="anchor" href="#aida-project" aria-hidden="true"><span class="octicon octicon-link"></span></a>AIDA Project</h4>
 
 <p><a href="http://aida.web.cern.ch/aida/index.html">AIDA Website</a></p>
 
 <h4>
-<a name="desy-ii-test-beam-facility" class="anchor" href="#desy-ii-test-beam-facility"><span class="octicon octicon-link"></span></a>DESY-II Test Beam Facility</h4>
+<a id="desy-ii-test-beam-facility" class="anchor" href="#desy-ii-test-beam-facility" aria-hidden="true"><span class="octicon octicon-link"></span></a>DESY-II Test Beam Facility</h4>
 
 <p><a href="http://testbeam.desy.de/">Website</a></p>
 
 <h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>To stay in touch and to receive announcements concerning workshops, the telescopes and testbeams, please subscribe to the CERN e-group <code>BeamTelescopesandTestBeams-Announcements</code>.</p>
 
