Updated starting www webpage

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>EUDET/AIDA Pixel Beam Telescopes</title>
+    <title>EUDET- and AIDA-type Beam Telescopes</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/beam-telescopes">View on GitHub</a>
 
-          <h1 id="project_title">EUDET/AIDA Pixel Beam Telescopes</h1>
-          <h2 id="project_tagline">References and Documentation</h2>
+          <h1 id="project_title">EUDET- and AIDA-type Beam Telescopes</h1>
+          <h2 id="project_tagline">References and Starting points</h2>
 
         </header>
     </div>
@@ -31,71 +31,65 @@
 
 <p>This page collects all helpful references and documentation for the EUDET/AIDA-family of pixel beam telescopes based on Mimosa-sensors.</p>
 
-<h2>
-<a id="telescope-hardware" class="anchor" href="#telescope-hardware" aria-hidden="true"><span class="octicon octicon-link"></span></a>Telescope Hardware</h2>
-
-<p><a href="https://twiki.cern.ch/twiki/bin/view/MimosaTelescope/WebHome">Telescope TWiki pages</a></p>
-
-<p><a href="http://www.eudet.org/e26/e28/e42441/e57298/EUDET-MEMO-2009-04.pdf">Description of the trigger logic unit (TLU), v0.2c</a></p>
-
-<p><a href="http://www.ohwr.org/projects/fmc-mtlu">Online documentation pages for the AIDA mini-TLU</a></p>
+<ul>
+    <li><b>EUDET-type telescopes</b> incorporate a NI-based Mimosa DAQ and the EUDET mode for data acquisition (EUDAQ1 and EUDET TLU).</li>
+    <li><b>AIDA-type telescopes</b> are using the upgrades: EUDAQ2 and AIDA TLU for AIDA mode (or mixed mode) data taking.</li>
+</ul>
 
 <h2>
-<a id="daq-and-analysis-software" class="anchor" href="#daq-and-analysis-software" aria-hidden="true"><span class="octicon octicon-link"></span></a>DAQ and Analysis Software</h2>
+<a id="telescope-hardware" class="anchor" href="#telescope-hardware" aria-hidden="true"><span class="octicon octicon-link"></span></a>Telescope Hardware & portal</h2>
 
-<h3>
-<a id="eudaq" class="anchor" href="#eudaq" aria-hidden="true"><span class="octicon octicon-link"></span></a>EUDAQ</h3>
+<p><a href="https://telescopes.desy.de/">Telescope Wiki: Portal and references, User manual, Hardware description, BTTB-Links, ...</a></p>
 
-<p>a generic data acquisition framework</p>
 
-<p><a href="http://eudaq.github.io/">Download and instructions</a></p>
+<h2>
+<a id="eudaq" class="anchor" href="#eudaq" aria-hidden="true"><span class="octicon octicon-link"></span></a>EUDAQ - a generic data acquisition framework</h2>
 
-<p><a href="https://github.com/eudaq/eudaq">Source Code</a></p>
+<ul>
+    <li><a href="http://eudaq.github.io/">Quick start & manuals</a></li>
+    <li><a href="https://github.com/eudaq/eudaq">Source Code</a></li>
+</ul>
 
-<h3>
-<a id="eutelescope" class="anchor" href="#eutelescope" aria-hidden="true"><span class="octicon octicon-link"></span></a>EUTelescope</h3>
 
-<p>A generic pixel telescope data analysis framework</p>
+<h2>
+<a id="eutelescope" class="anchor" href="#eutelescope" aria-hidden="true"><span class="octicon octicon-link"></span></a>EUTelescope - a generic telescope data analysis framework</h2>
 
-<p><a href="http://eutelescope.web.cern.ch/">Documentation and support</a></p>
+<ul>
+    <li><a href="http://eutelescope.web.cern.ch/">Documentation</a></li>
+    <li><a href="https://github.com/eutelescope/eutelescope">Source Code</a></li>
+</ul>   
 
-<p><a href="https://github.com/eutelescope/eutelescope">Source Code</a></p>
 
 <h2>
 <a id="further-references" class="anchor" href="#further-references" aria-hidden="true"><span class="octicon octicon-link"></span></a>Further References</h2>
-
-<h4>
-<a id="workshops" class="anchor" href="#workshops" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workshops</h4>
-
-<p><a href="http://indico.desy.de/conferenceDisplay.py?confId=10685">3rd Beam Telescopes and Test Beams Workshop 2015</a></p>
-
-<p><a href="http://indico.desy.de/conferenceDisplay.py?confId=10296">Beam Telescopes and Testbeams for Detector R&amp;D 2014</a></p>
-
-<p><a href="http://indico.desy.de/conferenceDisplay.py?confId=7597">Testbeam Pixel Telescope Data Analysis Workshop 2013</a></p>
-
-<h4>
-<a id="eudet-project" class="anchor" href="#eudet-project" aria-hidden="true"><span class="octicon octicon-link"></span></a>EUDET Project</h4>
-
-<p><a href="http://www.eudet.org/e13/e21/">EUDET JRA1 Website</a></p>
-
-<p><a href="http://www.eudet.org/e26/">EUDET Reports &amp; Presentations</a></p>
-
-<h4>
-<a id="aida-project" class="anchor" href="#aida-project" aria-hidden="true"><span class="octicon octicon-link"></span></a>AIDA Project</h4>
-
-<p><a href="http://aida.web.cern.ch/aida/index.html">AIDA Website</a></p>
 
 <h4>
 <a id="desy-ii-test-beam-facility" class="anchor" href="#desy-ii-test-beam-facility" aria-hidden="true"><span class="octicon octicon-link"></span></a>DESY-II Test Beam Facility</h4>
 
 <p><a href="http://testbeam.desy.de/">Website</a></p>
 
+<h4>
+<a id="trigger-logic-units" class="anchor" href="#trigger-logic-units" aria-hidden="true"><span class="octicon octicon-link"></span></a>Trigger Logic Units (TLUs)</h4>
+<ul>
+    <li><a href="http://www.eudet.org/e26/e28/e42441/e57298/EUDET-MEMO-2009-04.pdf">Description of the trigger logic unit (TLU), v0.2c</a></li>
+    <li><a href="http://www.ohwr.org/projects/fmc-mtlu">Hardware documentation for the AIDA TLU</a></li>
+</ul> 
+
+<h4>
+<a id="eu-projects" class="anchor" href="#eu-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>European Frameworks</h4>
+<ul>
+    <li><a href="http://www.eudet.org/">EUDET Website</a></li>
+    <li><a href="http://aida2020.web.cern.ch/content/aida">AIDA Website</a></li>
+    <li><a href="http://aida2020.web.cern.ch/">AIDA2020 Website</a></li>
+</ul>
+
+
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>To stay in touch and to receive announcements concerning workshops, the telescopes and testbeams, please subscribe to the CERN e-group <code>BeamTelescopesandTestBeams-Announcements</code>.</p>
+<p>To receive announcements for the Beam Telescopes and Test Beam (BTTB) workshops, please subscribe to the CERN e-group <code>BeamTelescopesandTestBeams-Announcements</code>.</p>
 
-<p>For specific telescope components please check out the corresponding pages above for documentation and support contacts.</p>
+<p>For specific telescope components please check out the corresponding pages above for documentation and support contacts, or contact Jan Dreyling-Eschweiler and Hendrik Jansen (Coordinators) directly: telescope-coor at desy.de</p>
       </section>
     </div>
 
