--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 <a id="test-beam-facility" class="anchor" href="#test-beam-facility" aria-hidden="true"><span class="octicon octicon-link"></span></a>Test Beam Facilities</h4>
 
 <ul>
-    <li><a href="http://testbeam.desy.de/">DESY-II Test Beam Facility</a>/li>
-    <li><a href="">CERN PS/SPS test beams</a>/li>
-    <li><a href="">ELSA Bonn</a>/li>
-    <li><a href="">SLAC</a>/li>
+    <li><a href="http://testbeam.desy.de/">DESY-II Test Beam Facility</a></li>
+    <li><a href="">CERN PS/SPS test beams</a></li>
+    <li><a href="">ELSA Bonn</a></li>
+    <li><a href="">SLAC</a></li>
 </ul>
 
 <h4>
