--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <a id="eudaq" class="anchor" href="#eudaq" aria-hidden="true"><span class="octicon octicon-link"></span></a>EUDAQ - a generic data acquisition framework</h2>
 
 <ul>
-    <li><a href="http://eudaq.github.io/">Quick start & manuals</a></li>
+    <li><a href="http://eudaq.github.io/">Starting points</a></li>
     <li><a href="https://github.com/eudaq/eudaq">Source Code</a></li>
 </ul>
 
@@ -55,7 +55,7 @@
 <a id="eutelescope" class="anchor" href="#eutelescope" aria-hidden="true"><span class="octicon octicon-link"></span></a>EUTelescope - a generic telescope data analysis framework</h2>
 
 <ul>
-    <li><a href="http://eutelescope.web.cern.ch/">Documentation</a></li>
+    <li><a href="http://eutelescope.github.io/">Starting points</a></li>
     <li><a href="https://github.com/eutelescope/eutelescope">Source Code</a></li>
 </ul>   
 
